fix horizontal scroll

--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -3,6 +3,7 @@
 .footer {
   width: 100%;
   padding: 40px 30px;
+  box-sizing: border-box;
 
   @media screen and (max-width: 992px) {
     padding: 20px 15px;
