--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -6,6 +6,7 @@
   left: 0;
   width: 100%;
   padding: 20px 30px;
+  box-sizing: border-box;
 
   @media screen and (max-width: 992px) {
     padding: 20px 15px;
